# requests_rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: CI.yml
examples/: example.py
src/: lib.rs
