[package]
name = "requests_rust"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "requests_rust"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = "*"
serde_json = "*"
pythonize = "*"
